refactor: stream 표현 변경
Java17 버전으로 변경되면서 추가된 toList()를 사용하도록 변경했습니다.